--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-        <link href="../css/style.css" rel="stylesheet" type="text/css"/>
+        <link href="css/style.css" rel="stylesheet" type="text/css"/>
         <meta charset="utf-8">
 	      <meta name="viewport" content="width=device-width, initial-scale=1">
 	      <title>EgKrav</title>
@@ -19,19 +19,19 @@
             </div>
             <div class="carousel-inner">
               <div class="carousel-item active">
-                <img src="../source/1.jpg" class="d-block w-100 rounded-4" alt="...">
+                <img src="source/1.jpg" class="d-block w-100 rounded-4" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <p class="shade">“Монки обнимаются”</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../source/2.jpg" class="d-block w-100 rounded-4" alt="...">
+                <img src="source/2.jpg" class="d-block w-100 rounded-4" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <p class="shade">“Монки флип”</p>
                 </div>
               </div>
               <div class="carousel-item">
-                <img src="../source/3.jpg" class="d-block w-100 rounded-4" alt="...">
+                <img src="source/3.jpg" class="d-block w-100 rounded-4" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                   <p class="shade">“Монки довольни”</p>
                 </div>
@@ -48,6 +48,6 @@
           </div>
         </div>
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.7.1/dist/jquery.min.js"></script>
-        <script src="../js/menu.js"></script>
+        <script src="js/menu.js"></script>
     </body>
 </html>
