--- a/materials.html
+++ b/materials.html
@@ -13,7 +13,7 @@
         <div class="card mx-auto bg-dark mt-5 mb-5" style="width: 50%; border-radius: 15px">
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="../source/4.jpg" class="img-fluid" style="border-radius: 15px">
+                <img src="4.jpg" class="img-fluid" style="border-radius: 15px">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -27,7 +27,7 @@
         <div class="card mx-auto bg-dark mt-5 mb-5 rounded-4" style="width: 50%;">
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="../source/5.jpg" class="img-fluid rounded-4">
+                <img src="5.jpg" class="img-fluid rounded-4">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -41,7 +41,7 @@
         <div class="card mx-auto bg-dark mt-5 mb-5 rounded-4" style="width: 50%;">
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="../source/6.jpg" class="img-fluid rounded-4">
+                <img src="6.jpg" class="img-fluid rounded-4">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
@@ -55,7 +55,7 @@
         <div class="card mx-auto bg-dark mt-5 mb-5 rounded-4" style="width: 50%;">
             <div class="row g-0">
               <div class="col-md-4">
-                <img src="../source/7.jpg" class="img-fluid rounded-4">
+                <img src="7.jpg" class="img-fluid rounded-4">
               </div>
               <div class="col-md-8">
                 <div class="card-body">
